Fix new messages button overflow during transition

--- a/messenger-hover.css
+++ b/messenger-hover.css
@@ -63,6 +63,9 @@
 }
 
 /*new message tab*/
+._4wzs {
+    overflow-x: hidden;
+}
 ._1bqr {
     display: none
 }
